--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "serverpanel",
+  "name": "suwuperviser",
   "version": "1.0.0",
-  "description": "",
+  "description": "A server program manager.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "author": "Brian Dean Ullery",
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "node-os-utils": "^1.3.7",
-    "os-utils": "^0.0.14",
     "path": "^0.12.7",
     "socket.io": "^4.7.5"
   }
