--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "istextorbinary": "^9.5.0",
     "path": "^0.12.7",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "unzipper": "^0.11.6"
   }
 }
