--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "isomorphic-git": "^1.25.10",
     "istextorbinary": "^9.5.0",
     "path": "^0.12.7",
     "socket.io": "^4.7.5",
