--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.19.2",
     "isomorphic-git": "^1.25.10",
     "istextorbinary": "^9.5.0",
+    "ms-wmic": "^1.0.4",
     "path": "^0.12.7",
     "socket.io": "^4.7.5",
     "unzipper": "^0.11.6"
