--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fast-speedtest-api": "^0.3.2",
     "isomorphic-git": "^1.25.10",
     "istextorbinary": "^9.5.0",
     "ms-wmic": "^1.0.4",
     "path": "^0.12.7",
     "socket.io": "^4.7.5",
+    "speed-test": "^3.0.0",
     "unzipper": "^0.11.6"
   }
 }
