--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fast-speedtest-api": "^0.3.2",
+    "https": "^1.0.0",
     "isomorphic-git": "^1.25.10",
     "istextorbinary": "^9.5.0",
     "ms-wmic": "^1.0.4",
